# Datascience-100knocks-rs

./: Cargo.toml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
answer/: ans_preprocess_knock_Python.ipynb  ans_preprocess_knock_Rust.ipynb
data/: P_df_product_full_cp932_header.csv
src/: main.rs  sec01.rs
