[project]
name = "datascience-100knocks-rs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "polars>=0.18.6",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
